Bug 436296 - IPv4 and IPv6 information are missing
Summary: IPv4 and IPv6 information are missing
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.21.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-28 06:29 UTC by Julien Delquié
Modified: 2021-08-20 16:05 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.5
Sentry Crash Report:


Attachments
No IP information in Network component (12.89 KB, image/png)
2021-04-28 06:29 UTC, Julien Delquié
Details
Network applet (44.14 KB, image/png)
2021-04-29 06:14 UTC, Julien Delquié
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Delquié 2021-04-28 06:29:26 UTC
Created attachment 137973 [details]
No IP information in Network component

SUMMARY

IPv4 and IPv6 information are missing in plasma-systemmonitor overview tab.

STEPS TO REPRODUCE
1. Open plasma-systemmonitor

OBSERVED RESULT

There are no IPv4/IPv6 information.

EXPECTED RESULT

There are IPv4/IPv6 information.

SOFTWARE/OS VERSIONS
Operating System: Gentoo Linux
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2
Kernel Version: 5.12.0-gentoo-x86_64
OS Type: 64-bit
Graphics Platform: X11

ADDITIONAL INFORMATION

I don't know how to help more to find out the bug.
Comment 1 Julien Delquié 2021-04-28 06:30:11 UTC
Here is my ip addr:
1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1000
    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
    inet 127.0.0.1/8 scope host lo
       valid_lft forever preferred_lft forever
2: eno1: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
    link/ether 04:d4:c4:8d:ce:3f brd ff:ff:ff:ff:ff:ff
    altname enp0s31f6
    inet 192.168.1.25/24 brd 192.168.1.255 scope global dynamic noprefixroute eno1
       valid_lft 82447sec preferred_lft 82447sec
3: virbr0: <NO-CARRIER,BROADCAST,MULTICAST,UP> mtu 1500 qdisc noqueue state DOWN group default qlen 1000
    link/ether 52:54:00:95:6d:80 brd ff:ff:ff:ff:ff:ff
    inet 192.168.122.1/24 brd 192.168.122.255 scope global virbr0
       valid_lft forever preferred_lft forever
Comment 2 Julien Delquié 2021-04-28 06:33:20 UTC
Here is the corresponding config in .local/share/plasma-systemmonitor/overview.page (I didn't edit it myself, it's plasma-systemmonitor that created it):
[Face-94410238879984][SensorColors]
network/eno1/ipv4address=61,174,233
network/eno1/ipv6address=233,120,61
Comment 3 David Redondo 2021-04-28 07:27:12 UTC
Does
kstatsviewer network/eno1/ipv4address
output anything?
Comment 4 Julien Delquié 2021-04-28 08:26:45 UTC
Nothing is output from this command, unfortunately.
Comment 5 Julien Delquié 2021-04-28 08:29:03 UTC
Actually, only this:

$ kstatsviewer network/eno1/ipv4address
network/eno1/ipv4address
Comment 6 David Redondo 2021-04-28 08:54:12 UTC
Oh, that means we are reasding an empty ip address!
Are you using network manager, if so does the plasma applet correctly display the ip address?
Comment 7 Julien Delquié 2021-04-29 06:14:24 UTC
Created attachment 137995 [details]
Network applet

Yes, I use it, with a DHCP configuration.

● NetworkManager.service - Network Manager
     Loaded: loaded (/lib/systemd/system/NetworkManager.service; enabled; vendor preset: disabled)
     Active: active (running) since Thu 2021-04-29 08:06:39 CEST; 5min ago
       Docs: man:NetworkManager(8)
   Main PID: 461 (NetworkManager)
     Memory: 14.8M
        CPU: 266ms
     CGroup: /system.slice/NetworkManager.service
             └─461 /usr/sbin/NetworkManager --no-daemon


I just attached a screenshot of the applet.
Comment 8 David Redondo 2021-04-29 06:57:54 UTC
Do you remember if you did build ksysguard with NetworkManager?
Comment 9 Julien Delquié 2021-04-29 09:42:19 UTC
My gentoo tells me that it is.

$ equery uses kde-plasma/ksysguard
[ Legend : U - final flag setting for installation]
[        : I - package is installed with flag     ]
[ Colors : set, unset                             ]
 * Found these USE flags for kde-plasma/ksysguard-5.21.4:
 U I
 - - debug          : Enable extra debug codepaths, like asserts and extra output. If you want to get meaningful backtraces see
                      https://wiki.gentoo.org/wiki/Project:Quality_Assurance/Backtraces
 + + handbook       : Enable handbooks generation for packages by KDE
 + + lm-sensors     : Add linux lm-sensors (hardware sensors) support
 + + networkmanager : Enable improved backend for Network statistics using kde-frameworks/networkmanager-qt
 - - test           : Enable dependencies and/or preparations necessary to run tests (usually controlled by FEATURES=test but can be toggled independently)
Comment 10 David Redondo 2021-05-04 08:55:47 UTC
Hmm so I am a bit out of ideas, the network applet uses the same method to look for the ip address as us https://invent.kde.org/plasma/plasma-nm/-/blob/master/libs/models/networkmodelitem.cpp#L538.

I think adding some debug output will not help here, maybe we have to look inside NetworkManagerQt...

Quick question is 'ksystemstats' already running when you start your system? Does it produce any interesting output when you restart it manually after stopping it?
Comment 11 Julien Delquié 2021-05-04 09:46:37 UTC
Yes, ksystemstats is running at start of my session, I suppose (launched by dbus service at user level in systemd).

Manually kill and start ksystemstats, changes nothing.
Comment 12 Julien Delquié 2021-05-04 09:50:28 UTC
For information, I manually disabled IPv6 long time ago, so I only have IPv4 on my interfaces.
This should not be a problem for all these tools and plasma-systemmonitor, I suppose?

$ ip addr
1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1000
    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
    inet 127.0.0.1/8 scope host lo
       valid_lft forever preferred_lft forever
2: eno1: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
    link/ether 04:d4:c4:8d:ce:3f brd ff:ff:ff:ff:ff:ff
    altname enp0s31f6
    inet 192.168.1.25/24 brd 192.168.1.255 scope global dynamic noprefixroute eno1
       valid_lft 73089sec preferred_lft 73089sec
3: virbr0: <NO-CARRIER,BROADCAST,MULTICAST,UP> mtu 1500 qdisc noqueue state DOWN group default qlen 1000
    link/ether 52:54:00:95:6d:80 brd ff:ff:ff:ff:ff:ff
    inet 192.168.122.1/24 brd 192.168.122.255 scope global virbr0
       valid_lft forever preferred_lft forever
Comment 13 Julien Delquié 2021-08-15 17:09:06 UTC
Hey! I just checked! If I reactivate IPv6 on my system, both IPv4 and IPv6 are available through kstatsviewer and plasma-systemmonitor. That is the only way.

That's weird!
Comment 14 David Edmundson 2021-08-20 14:42:55 UTC
Reproduced by setting ipv6 to disabled in network-manager
Comment 15 Bug Janitor Service 2021-08-20 14:47:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/ksystemstats/-/merge_requests/12
Comment 16 David Edmundson 2021-08-20 15:47:41 UTC
Git commit c702da68211bab93f49701739962e51658a9c147 by David Edmundson.
Committed on 20/08/2021 at 15:47.
Pushed by davidedmundson into branch 'master'.

Fix handling of IPV6 addresses

A copy and paste mistake

M  +1    -1    plugins/network/NetworkManagerBackend.cpp

https://invent.kde.org/plasma/ksystemstats/commit/c702da68211bab93f49701739962e51658a9c147
Comment 17 Nate Graham 2021-08-20 16:04:21 UTC
Git commit f8523a922f3f6032aa7e06a4dcbebd9f94065c9d by Nate Graham, on behalf of David Edmundson.
Committed on 20/08/2021 at 16:04.
Pushed by ngraham into branch 'Plasma/5.22'.

Fix handling of IPV6 addresses

A copy and paste mistake


(cherry picked from commit c702da68211bab93f49701739962e51658a9c147)

M  +1    -1    plugins/network/NetworkManagerBackend.cpp

https://invent.kde.org/plasma/ksystemstats/commit/f8523a922f3f6032aa7e06a4dcbebd9f94065c9d