Fix handling of IPV6 addresses

A copy and paste mistake

BUG: 436296